[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
itertools = "0.13.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
toml = "0.8.19"
