[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
grid = "0.15.0"
html-escape = "0.2.13"
itertools = "0.13.0"
jsonwebtoken = { version = "9.3.0", default-features = false, features = ["use_pem"] }
rand = "0.8.5"
random-string = "1.1.0"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = "1.26.0"
toml = "0.8.19"
